--- a/styles/register.css
+++ b/styles/register.css
@@ -1,4 +1,9 @@
-.loginForm {
+.registerTitle {
+    text-align: center;
+    color: #333;
+    margin-top: 20px;
+}
+.registerForm {
     background-color: #f4f4f4;
     padding: 20px;
     flex: 1 1 300px;
@@ -12,7 +17,7 @@
     margin-top: 20px;
 }
 
-.loginForm input {
+.registerForm input {
     width: 100%;
     padding: 10px;
     margin: 10px 0;
@@ -20,7 +25,7 @@
     border-radius: 4px;
 }
 
-.loginForm button {
+.registerForm button {
     width: 100%;
     padding: 10px;
     background-color: #333;
